Fixed the spacing issues for the bottom

--- a/src/css/landingpage_style.css
+++ b/src/css/landingpage_style.css
@@ -85,4 +85,9 @@ h1#intro
     {
         font-size: 18px;
     }
+
+    main
+    {
+        padding-bottom: 90px;
+    }
 }
